# PyTrios

./: .gitignore  PyTrios.py  PyTrios_Examples.py  README.md  Rrs_example.py  changelog.txt  gpstest.py  pyproject.toml  ramses_calibrate.py  sample_trios.py  start_1_sample.bat
PyTrios-master/: README.md
pytrios/: PyTrios.py  TClasses.py  __init__.py  gpslib.py  pytriosg1.py  pytriosg2.py  radman.py  ramses_calibrate.py
